Ensure each grid overflows with a scrollbar
Otherwise it throws off the dimensions of the table (e.g. can scroll beyond the table height due to overflowing content -- which might be desirable for dropdowns... This is kind of necessitating a string cell which overflows -- multi-line?)

--- a/src/grid-cell.css
+++ b/src/grid-cell.css
@@ -3,6 +3,7 @@
   border-right: 1px solid black;
   flex-shrink: 0;
   height: 50px;
+  overflow: auto; /* This might break DOM-based dropdowns */
   width: 200px;
 }
 
